fix border-section on tablet versions

--- a/styles/components/border-section.scss
+++ b/styles/components/border-section.scss
@@ -14,7 +14,9 @@
   }
   &.autoheight {
     .border-section__wrapper {
-      height: 100%;
+      @include media('>#{$br1}') {
+        height: 100%;
+      }
     }
     .container {
       height: 100%;
